--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "75251f37",
+   "id": "da3a597a",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8c7cd715",
+   "id": "b97347c4",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,9 @@
     "lines = f.readlines()\n",
     "for line in lines:\n",
     "    print(line)\n",
-    "    # \n",
+    "    # pour enlever les doubles retours chariots, on peut\n",
+    "    # * soit dire à print de ne pas en rajouter à la fin de ce qu'il affiche\n",
+    "    # * soit l'enlever dans la source (sur chaque ligne)\n",
     "    \n",
     "#\n",
     "# for index in range(len(lines)):\n",
@@ -103,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "90690817",
+   "id": "98abc339",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbb31414",
+   "id": "41765aa6",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -131,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "55b4ef47",
+   "id": "fd8499cc",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b9a7d1",
+   "id": "20ee49c4",
    "metadata": {},
    "outputs": [],
    "source": []
