--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "da3a597a",
+   "id": "3573b20a",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b97347c4",
+   "execution_count": 32,
+   "id": "5ab671ac",
    "metadata": {},
    "outputs": [
     {
@@ -81,6 +81,32 @@
       "    # version en une ligne\n",
       "\n",
       "    # print(\"fizz\" * (nombre % 3 == 0) + \"buzz\" * (nombre % 5 == 0) or str(nombre))\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Solution 4 avec match / case (python >= 3.10)\n",
+      "\n",
+      "# for nombre in range(1, 101):\n",
+      "\n",
+      "#     match (nombre % 3, nombre % 5):\n",
+      "\n",
+      "#         case (0, 0):\n",
+      "\n",
+      "#             print(\"fizzbuzz\")\n",
+      "\n",
+      "#         case (0, _):\n",
+      "\n",
+      "#             print(\"fizz\")\n",
+      "\n",
+      "#         case (_, 0):\n",
+      "\n",
+      "#             print(f\"buzz\")\n",
+      "\n",
+      "#         case _, _:\n",
+      "\n",
+      "#             print(nombre)\n",
       "\n"
      ]
     }
@@ -90,9 +116,10 @@
     "\n",
     "lines = f.readlines()\n",
     "for line in lines:\n",
+    "    \n",
     "    print(line)\n",
     "    # pour enlever les doubles retours chariots, on peut\n",
-    "    # * soit dire à print de ne pas en rajouter à la fin de ce qu'il affiche\n",
+    "    # * soit dire à print de ne pas en rajouter à la fin de ce qu'il affiche : print(line, end=\"\")\n",
     "    # * soit l'enlever dans la source (sur chaque ligne)\n",
     "    \n",
     "#\n",
@@ -105,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "98abc339",
+   "id": "b80f7ad3",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41765aa6",
+   "id": "133a1dcc",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -133,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fd8499cc",
+   "id": "cdf3a3a3",
    "metadata": {},
    "outputs": [
     {
@@ -164,8 +191,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "735cc2b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function strip:\n",
+      "\n",
+      "strip(chars=None, /) method of builtins.str instance\n",
+      "    Return a copy of the string with leading and trailing whitespace removed.\n",
+      "    \n",
+      "    If chars is given and not None, remove characters in chars instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(\"\".strip)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "20ee49c4",
+   "id": "94a3049b",
    "metadata": {},
    "outputs": [],
    "source": []
