--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3573b20a",
+   "id": "edb0d320",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "5ab671ac",
+   "execution_count": 34,
+   "id": "ae3f46d3",
    "metadata": {},
    "outputs": [
     {
@@ -19,95 +19,50 @@
      "output_type": "stream",
      "text": [
       "## Solution 1\n",
-      "\n",
       "# for nombre in range(1, 101):\n",
-      "\n",
       "#     if nombre % 5 == 0 and nombre % 3 == 0:\n",
-      "\n",
       "#         print(\"fizzbuzz\")\n",
-      "\n",
       "#     elif nombre % 3 == 0:\n",
-      "\n",
       "#         print(\"fizz\")\n",
-      "\n",
       "#     elif nombre % 5 == 0:\n",
-      "\n",
       "#         print(\"buzz\")\n",
-      "\n",
       "#     else:\n",
-      "\n",
       "#         print(nombre)\n",
       "\n",
-      "\n",
-      "\n",
       "## Solution 2 (sans les elif)\n",
-      "\n",
       "# for nombre in range(1, 101):\n",
-      "\n",
       "#     resultat = \"\"\n",
-      "\n",
       "#     # \"fizzbuzz\" = \"fizz\" + \"buzz\"\n",
-      "\n",
       "#     if nombre % 3 == 0:\n",
-      "\n",
       "#         resultat = resultat + \"fizz\"\n",
-      "\n",
       "#     if nombre % 5 == 0:\n",
-      "\n",
       "#         resultat = resultat + \"buzz\"\n",
-      "\n",
       "#     if resultat:\n",
-      "\n",
       "#         resultat = str(nombre)\n",
-      "\n",
       "#     print(resultat)\n",
       "\n",
-      "\n",
-      "\n",
       "## Solution 3 (sans les if)\n",
-      "\n",
       "for nombre in range(1, 101):\n",
-      "\n",
-      "    gauche_plus = \"fizz\" * (nombre % 3 == 0)\n",
-      "\n",
-      "    droite_plus = \"buzz\" * (nombre % 5 == 0)\n",
-      "\n",
-      "    gauche = gauche_plus + droite_plus\n",
-      "\n",
-      "    droite = str(nombre)\n",
-      "\n",
-      "    print(gauche or droite)\n",
-      "\n",
-      "    # version en une ligne\n",
-      "\n",
-      "    # print(\"fizz\" * (nombre % 3 == 0) + \"buzz\" * (nombre % 5 == 0) or str(nombre))\n",
-      "\n",
-      "\n",
-      "\n",
+      "gauche_plus = \"fizz\" * (nombre % 3 == 0)\n",
+      "droite_plus = \"buzz\" * (nombre % 5 == 0)\n",
+      "gauche = gauche_plus + droite_plus\n",
+      "droite = str(nombre)\n",
+      "print(gauche or droite)\n",
+      "# version en une ligne\n",
+      "# print(\"fizz\" * (nombre % 3 == 0) + \"buzz\" * (nombre % 5 == 0) or str(nombre))\n",
       "\n",
       "\n",
       "## Solution 4 avec match / case (python >= 3.10)\n",
-      "\n",
       "# for nombre in range(1, 101):\n",
-      "\n",
       "#     match (nombre % 3, nombre % 5):\n",
-      "\n",
       "#         case (0, 0):\n",
-      "\n",
       "#             print(\"fizzbuzz\")\n",
-      "\n",
       "#         case (0, _):\n",
-      "\n",
       "#             print(\"fizz\")\n",
-      "\n",
       "#         case (_, 0):\n",
-      "\n",
       "#             print(f\"buzz\")\n",
-      "\n",
       "#         case _, _:\n",
-      "\n",
-      "#             print(nombre)\n",
-      "\n"
+      "#             print(nombre)\n"
      ]
     }
    ],
@@ -116,7 +71,7 @@
     "\n",
     "lines = f.readlines()\n",
     "for line in lines:\n",
-    "    \n",
+    "    line = line.rstrip()\n",
     "    print(line)\n",
     "    # pour enlever les doubles retours chariots, on peut\n",
     "    # * soit dire à print de ne pas en rajouter à la fin de ce qu'il affiche : print(line, end=\"\")\n",
@@ -132,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b80f7ad3",
+   "id": "789a5e72",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "133a1dcc",
+   "id": "d7c26930",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -160,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cdf3a3a3",
+   "id": "a6383276",
    "metadata": {},
    "outputs": [
     {
@@ -191,18 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "735cc2b5",
+   "execution_count": 36,
+   "id": "7abaaccf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on built-in function strip:\n",
+      "Help on built-in function lstrip:\n",
       "\n",
-      "strip(chars=None, /) method of builtins.str instance\n",
-      "    Return a copy of the string with leading and trailing whitespace removed.\n",
+      "lstrip(chars=None, /) method of builtins.str instance\n",
+      "    Return a copy of the string with leading whitespace removed.\n",
       "    \n",
       "    If chars is given and not None, remove characters in chars instead.\n",
       "\n"
@@ -210,13 +165,13 @@
     }
    ],
    "source": [
-    "help(\"\".strip)"
+    "help(\"\".lstrip)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94a3049b",
+   "id": "1e409845",
    "metadata": {},
    "outputs": [],
    "source": []
