--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f829bf36",
+   "id": "7f3ee0c7",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "009704cb",
+   "execution_count": 41,
+   "id": "c0ddfc4a",
    "metadata": {},
    "outputs": [
     {
@@ -19,91 +19,50 @@
      "output_type": "stream",
      "text": [
       "## Solution 1\n",
-      "\n",
       "# for nombre in range(1, 101):\n",
-      "\n",
       "#     if nombre % 5 == 0 and nombre % 3 == 0:\n",
-      "\n",
       "#         print(\"fizzbuzz\")\n",
-      "\n",
       "#     elif nombre % 3 == 0:\n",
-      "\n",
       "#         print(\"fizz\")\n",
-      "\n",
       "#     elif nombre % 5 == 0:\n",
-      "\n",
       "#         print(\"buzz\")\n",
-      "\n",
       "#     else:\n",
-      "\n",
       "#         print(nombre)\n",
       "\n",
-      "\n",
       "## Solution 2 (sans les elif)\n",
-      "\n",
       "# for nombre in range(1, 101):\n",
-      "\n",
       "#     resultat = \"\"\n",
-      "\n",
       "#     # \"fizzbuzz\" = \"fizz\" + \"buzz\"\n",
-      "\n",
       "#     if nombre % 3 == 0:\n",
-      "\n",
       "#         resultat = resultat + \"fizz\"\n",
-      "\n",
       "#     if nombre % 5 == 0:\n",
-      "\n",
       "#         resultat = resultat + \"buzz\"\n",
-      "\n",
       "#     if resultat:\n",
-      "\n",
       "#         resultat = str(nombre)\n",
-      "\n",
       "#     print(resultat)\n",
       "\n",
-      "\n",
       "## Solution 3 (sans les if)\n",
-      "\n",
       "for nombre in range(1, 101):\n",
-      "\n",
-      "gauche_plus = \"fizz\" * (nombre % 3 == 0)\n",
-      "\n",
-      "droite_plus = \"buzz\" * (nombre % 5 == 0)\n",
-      "\n",
-      "gauche = gauche_plus + droite_plus\n",
-      "\n",
-      "droite = str(nombre)\n",
-      "\n",
-      "print(gauche or droite)\n",
-      "\n",
-      "# version en une ligne\n",
-      "\n",
-      "# print(\"fizz\" * (nombre % 3 == 0) + \"buzz\" * (nombre % 5 == 0) or str(nombre))\n",
-      "\n",
+      "    gauche_plus = \"fizz\" * (nombre % 3 == 0)\n",
+      "    droite_plus = \"buzz\" * (nombre % 5 == 0)\n",
+      "    gauche = gauche_plus + droite_plus\n",
+      "    droite = str(nombre)\n",
+      "    print(gauche or droite)\n",
+      "    # version en une ligne\n",
+      "    # print(\"fizz\" * (nombre % 3 == 0) + \"buzz\" * (nombre % 5 == 0) or str(nombre))\n",
       "\n",
       "\n",
       "## Solution 4 avec match / case (python >= 3.10)\n",
-      "\n",
       "# for nombre in range(1, 101):\n",
-      "\n",
       "#     match (nombre % 3, nombre % 5):\n",
-      "\n",
       "#         case (0, 0):\n",
-      "\n",
       "#             print(\"fizzbuzz\")\n",
-      "\n",
       "#         case (0, _):\n",
-      "\n",
       "#             print(\"fizz\")\n",
-      "\n",
       "#         case (_, 0):\n",
-      "\n",
       "#             print(f\"buzz\")\n",
-      "\n",
       "#         case _, _:\n",
-      "\n",
-      "#             print(nombre)\n",
-      "\n"
+      "#             print(nombre)\n"
      ]
     }
    ],
@@ -112,7 +71,9 @@
     "\n",
     "lines = f.readlines()\n",
     "for line in lines:\n",
-    "    line = line.lstrip()\n",
+    "    # line = line.rstrip()\n",
+    "    # line = line.replace(\"\\n\", \"\")\n",
+    "    line = line[:-1]\n",
     "    print(line)\n",
     "    # pour enlever les doubles retours chariots, on peut\n",
     "    # * soit dire à print de ne pas en rajouter à la fin de ce qu'il affiche : print(line, end=\"\")\n",
@@ -128,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2adfe55",
+   "id": "e9a237fb",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d88300c0",
+   "id": "6e0da0b4",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -156,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9176994d",
+   "id": "dab62e3a",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4c4c0aae",
+   "id": "c163e0a6",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04907ca7",
+   "id": "8fe2dfd2",
    "metadata": {},
    "outputs": [],
    "source": []
