--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f3ee0c7",
+   "id": "39202455",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "c0ddfc4a",
+   "execution_count": 42,
+   "id": "62a9eda2",
    "metadata": {},
    "outputs": [
     {
@@ -71,9 +71,9 @@
     "\n",
     "lines = f.readlines()\n",
     "for line in lines:\n",
-    "    # line = line.rstrip()\n",
+    "    line = line.rstrip()\n",
     "    # line = line.replace(\"\\n\", \"\")\n",
-    "    line = line[:-1]\n",
+    "    # line = line[:-1]\n",
     "    print(line)\n",
     "    # pour enlever les doubles retours chariots, on peut\n",
     "    # * soit dire à print de ne pas en rajouter à la fin de ce qu'il affiche : print(line, end=\"\")\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e9a237fb",
+   "id": "aef82c09",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e0da0b4",
+   "id": "b2c52fc7",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dab62e3a",
+   "id": "009ad8b2",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c163e0a6",
+   "id": "97cf545f",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe2dfd2",
+   "id": "c2e99b7c",
    "metadata": {},
    "outputs": [],
    "source": []
