--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39202455",
+   "id": "782c7ceb",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "62a9eda2",
+   "id": "2590a91c",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
     "    print(line)\n",
     "    # pour enlever les doubles retours chariots, on peut\n",
     "    # * soit dire à print de ne pas en rajouter à la fin de ce qu'il affiche : print(line, end=\"\")\n",
-    "    # * soit l'enlever dans la source (sur chaque ligne)\n",
+    "    # * soit l'enlever dans la source (sur chaque ligne) : rstrip ou replace ou tout sauf le dernier char\n",
     "    \n",
     "#\n",
     "# for index in range(len(lines)):\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aef82c09",
+   "id": "9c7693df",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2c52fc7",
+   "id": "f2f70897",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "009ad8b2",
+   "id": "2106ba0e",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "97cf545f",
+   "id": "59fa5d93",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2e99b7c",
+   "id": "406eb49a",
    "metadata": {},
    "outputs": [],
    "source": []
