--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "782c7ceb",
+   "id": "b0f6e16e",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2590a91c",
+   "id": "0c9728b0",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9c7693df",
+   "id": "adb2a436",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2f70897",
+   "id": "20b4ab8f",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2106ba0e",
+   "id": "0cc735fc",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "59fa5d93",
+   "id": "b87dab4b",
    "metadata": {},
    "outputs": [
     {
@@ -172,8 +172,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "id": "0746a501",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function readlines:\n",
+      "\n",
+      "readlines(hint=-1, /) method of _io.TextIOWrapper instance\n",
+      "    Return a list of lines from the stream.\n",
+      "    \n",
+      "    hint can be specified to control the number of lines read: no more\n",
+      "    lines will be read if the total size (in bytes/characters) of all\n",
+      "    lines so far exceeds hint.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(f.readlines)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "406eb49a",
+   "id": "487f2169",
    "metadata": {},
    "outputs": [],
    "source": []
