--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b0f6e16e",
+   "id": "11098d77",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "0c9728b0",
+   "id": "9449918a",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "adb2a436",
+   "id": "2a86c7e2",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b4ab8f",
+   "id": "72e14b3f",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0cc735fc",
+   "id": "955c2ec2",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "b87dab4b",
+   "id": "453257db",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0746a501",
+   "id": "8a0ac9f3",
    "metadata": {},
    "outputs": [
     {
@@ -198,8 +198,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "id": "a4ba09ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c', 'd', 'e']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines = [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\"]\n",
+    "lines[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "487f2169",
+   "id": "2bf250c4",
    "metadata": {},
    "outputs": [],
    "source": []
