--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "11098d77",
+   "id": "7aba0bbd",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9449918a",
+   "id": "508da523",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2a86c7e2",
+   "id": "b4733562",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e14b3f",
+   "id": "e3509e28",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "955c2ec2",
+   "id": "59089317",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "453257db",
+   "id": "49b01669",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "8a0ac9f3",
+   "id": "3a16a37a",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a4ba09ed",
+   "id": "64f76da7",
    "metadata": {},
    "outputs": [
     {
@@ -220,8 +220,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "id": "3e18334c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['e', 'f']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines = [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\"]\n",
+    "lines[len(lines)-2:len(lines)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2bf250c4",
+   "id": "dc33130c",
    "metadata": {},
    "outputs": [],
    "source": []
