--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7aba0bbd",
+   "id": "db7b34ed",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "508da523",
+   "id": "e832f0cd",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b4733562",
+   "id": "065112bf",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3509e28",
+   "id": "e197ee51",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "59089317",
+   "id": "445a53c4",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "49b01669",
+   "id": "f4207a6d",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "3a16a37a",
+   "id": "fa5dcd9a",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "64f76da7",
+   "id": "60de0152",
    "metadata": {},
    "outputs": [
     {
@@ -220,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "3e18334c",
+   "execution_count": 52,
+   "id": "9faf597e",
    "metadata": {},
    "outputs": [
     {
@@ -230,20 +230,20 @@
        "['e', 'f']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lines = [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\"]\n",
-    "lines[len(lines)-2:len(lines)]"
+    "lines[-2:]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc33130c",
+   "id": "3d326281",
    "metadata": {},
    "outputs": [],
    "source": []
