--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b19eaa8",
+   "id": "98fd4150",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7e4263e4",
+   "id": "0fda3594",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "da03c138",
+   "id": "a82c3cd9",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd3d50da",
+   "id": "a1c775c2",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "00be3317",
+   "id": "8ba514db",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7fe69c69",
+   "id": "25182d5c",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "441a6228",
+   "id": "6ad0228a",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "44f2f5fa",
+   "id": "60e6ada4",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "494fa55c",
+   "id": "fae2e19d",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "eb15be67",
+   "id": "9aa9dd18",
    "metadata": {},
    "outputs": [
     {
@@ -272,10 +272,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02d479fc",
+   "id": "e158e9ad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def inutile(a, b):\n",
+    "    print(a)\n",
+    "    print(b)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
