--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98fd4150",
+   "id": "369cb20d",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "0fda3594",
+   "id": "76c9e62b",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a82c3cd9",
+   "id": "ab39a30f",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1c775c2",
+   "id": "42821730",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8ba514db",
+   "id": "49c32698",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "25182d5c",
+   "id": "fa5494b3",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6ad0228a",
+   "id": "c701585b",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "60e6ada4",
+   "id": "71750b4b",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "fae2e19d",
+   "id": "8ca7ca3a",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "9aa9dd18",
+   "id": "0fc9a284",
    "metadata": {},
    "outputs": [
     {
@@ -271,16 +271,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e158e9ad",
+   "execution_count": 64,
+   "id": "45d46da6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "riri\n",
+      "fifi\n",
+      "loulou\n"
+     ]
+    }
+   ],
    "source": [
-    "def inutile(a, b):\n",
+    "def inutile(a, b, c):\n",
     "    print(a)\n",
     "    print(b)\n",
-    "\n"
+    "    print(c)\n",
+    "\n",
+    "inutile(c=\"loulou\",  b=\"fifi\", a=\"riri\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5acf6bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
