--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a84f6470",
+   "id": "d3977a4d",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "0f31617c",
+   "id": "0ac8270f",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a37818e6",
+   "id": "b9258a41",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39d2b8b2",
+   "id": "e5de94c4",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f900e4c4",
+   "id": "4e811715",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8ea89b0b",
+   "id": "0b06065d",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "033dda61",
+   "id": "0ae079a0",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "d611fdc8",
+   "id": "a4a6cf8f",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "cf0939e4",
+   "id": "d1af487b",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a72621fc",
+   "id": "ccfbe423",
    "metadata": {},
    "outputs": [
     {
@@ -271,33 +271,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "74331bbc",
+   "execution_count": 67,
+   "id": "991e8c48",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "riri\n",
-      "fifi\n",
-      "loulou\n"
+      "6\n"
      ]
     }
    ],
    "source": [
     "def inutile(a, b, c):\n",
-    "    print(a)\n",
-    "    print(b)\n",
-    "    print(c)\n",
+    "    print(a + b + c)\n",
     "\n",
-    "inutile(c=\"loulou\", b=\"fifi\", a=\"riri\")"
+    "inutile(c=1, b=2, a=3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2244a8fa",
+   "id": "a68f6b72",
    "metadata": {},
    "outputs": [],
    "source": []
