--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e6581861",
+   "id": "36c2e5a3",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "bf71d95f",
+   "id": "f03eaff6",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1af00d5c",
+   "id": "ab3b8c8f",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83ffe4d2",
+   "id": "ceb30bdb",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "eceb2aae",
+   "id": "611c0f86",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "40d5951e",
+   "id": "0fd38956",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e26f6c8b",
+   "id": "f42b6e84",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "09d59a3c",
+   "id": "308c6923",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "bb762805",
+   "id": "e1ce884f",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "5a80e6b1",
+   "id": "208975c1",
    "metadata": {},
    "outputs": [
     {
@@ -271,20 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "d95b1ada",
+   "execution_count": 72,
+   "id": "378479e2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"str\") to list",
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (1997292799.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [68], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minutile\u001b[39m(a, b, c):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(a \u001b[38;5;241m+\u001b[39m b \u001b[38;5;241m+\u001b[39m c)\n\u001b[0;32m----> 4\u001b[0m inutile(c\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, b\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m, a\u001b[38;5;241m=\u001b[39m[])\n",
-      "Cell \u001b[0;32mIn [68], line 2\u001b[0m, in \u001b[0;36minutile\u001b[0;34m(a, b, c)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minutile\u001b[39m(a, b, c):\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m \u001b[38;5;241m+\u001b[39m c)\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"str\") to list"
+      "\u001b[0;36m  Cell \u001b[0;32mIn [72], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    inutile(1, c=3, 2)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
      ]
     }
    ],
@@ -292,13 +288,13 @@
     "def inutile(a, b, c):\n",
     "    print(a + b + c)\n",
     "\n",
-    "inutile()"
+    "inutile(1, c=3, 2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d4d8746",
+   "id": "74337eb2",
    "metadata": {},
    "outputs": [],
    "source": []
