--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "36c2e5a3",
+   "id": "7b355b02",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f03eaff6",
+   "id": "65af6a3e",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ab3b8c8f",
+   "id": "3ac5c7fa",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb30bdb",
+   "id": "5346cd19",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "611c0f86",
+   "id": "9ea8e7a8",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0fd38956",
+   "id": "6ddf464c",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "f42b6e84",
+   "id": "ceba5028",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "308c6923",
+   "id": "5fc37ee1",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e1ce884f",
+   "id": "18eb9483",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "208975c1",
+   "id": "b13c19b6",
    "metadata": {},
    "outputs": [
     {
@@ -271,30 +271,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "378479e2",
+   "execution_count": 77,
+   "id": "531c32fc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (1997292799.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [72], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    inutile(1, c=3, 2)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
      ]
     }
    ],
    "source": [
-    "def inutile(a, b, c):\n",
+    "def inutile(a, b=3, c=5):\n",
     "    print(a + b + c)\n",
     "\n",
-    "inutile(1, c=3, 2)"
+    "inutile(1, b=1, c=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74337eb2",
+   "id": "30a06dd5",
    "metadata": {},
    "outputs": [],
    "source": []
