--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7b355b02",
+   "id": "70ff4810",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "65af6a3e",
+   "id": "a5e3c321",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3ac5c7fa",
+   "id": "8130ed15",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5346cd19",
+   "id": "9c0f863c",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9ea8e7a8",
+   "id": "62aac50b",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6ddf464c",
+   "id": "a566d87c",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ceba5028",
+   "id": "48038aec",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "5fc37ee1",
+   "id": "d8162bbb",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "18eb9483",
+   "id": "f63c1ac8",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b13c19b6",
+   "id": "eb4e8d47",
    "metadata": {},
    "outputs": [
     {
@@ -271,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "531c32fc",
+   "execution_count": 78,
+   "id": "eddb673c",
    "metadata": {},
    "outputs": [
     {
@@ -287,13 +287,13 @@
     "def inutile(a, b=3, c=5):\n",
     "    print(a + b + c)\n",
     "\n",
-    "inutile(1, b=1, c=1)"
+    "inutile(1, 1, c=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30a06dd5",
+   "id": "b3d18455",
    "metadata": {},
    "outputs": [],
    "source": []
